create html and style css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <h1>Einkaufsliste</h1>
+        <img class="cat-image" src="images/cat_trolley.png" alt="cute cat sitting in a trolley">
+        <input>
+        <button id="save-btn">SAVE</button>
+        <button id="delete-btn">DELETE</button>
         <script src="index.js"></script>
     </body>
 </html>
