--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
                 <h1>Einkaufsliste</h1>
             </header>
 
-           <section class="input">
-               <input placeholder="Bananen">
-           </section>
-           
-           <section class="buttons">
-                <button id="save-btn">SAVE</button>
-                <button class="inverse" id="delete-btn">DELETE</button>
+           <section class="insert-section">
+                <input id="input-el" type="text" placeholder="Bananen">
+                <div class="buttons">
+                    <button id="save-btn">SAVE</button>
+                    <button class="inverse" id="delete-btn">DELETE</button>
+                </div>
+            </section>
+
+           <section class="list-items">
+                <ul id="list-el">
+                    <li>list example</li>
+                </ul>
            </section>
 
         </div>
